# wukong

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.http  justfile
.github/workflows/: ci.yml  release.yml
scripts/: hello.java
src/: common.rs  foojay.rs  jarviz.rs  jaz.rs  jbang.rs  jenv.rs  lib.rs  mcs.rs  mt.rs  sdkman.rs
src/jarviz_cli/: bytecode.rs  clap_app.rs  entries.rs  mod.rs  services.rs
src/jbang_cli/: alias.rs  app.rs  build.rs  cache.rs  catalog.rs  clap_app.rs  completion.rs  config.rs  edit.rs  export.rs  info.rs  init.rs  jdk.rs  mod.rs  models.rs  run.rs  template.rs  trust.rs  upgrade.rs  version.rs  wrapper.rs
src/jbang_cli/completion/: jbang.sh
src/jbang_cli/templates/: cli.java  hello.groovy  hello.java  hello.kt
src/jenv_cli/: app.rs  clap_app.rs  mod.rs
src/mcs_cli/: clap_app.rs  mod.rs
src/mt_cli/: clap_app.rs  mod.rs  models.rs
src/sdkman_cli/: app.rs  clap_app.rs  current.rs  default.rs  direnv.rs  env.rs  home.rs  init.rs  install.rs  list.rs  mod.rs  uninstall.rs  upgrade.rs  use_candidate.rs
tests/: hello.java  oneio_test.rs
tests/dependencies/: gradle-dependencies.txt  maven-dependencies.txt
