[package]
name = "wukong"
version = "0.1.0"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "Wukong is a command-line toolchain for Java with Rust"
keywords = ["java", "toolchain", "jbang", "sdkman"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/wukong"
readme = "README.md"
homepage = "https://github.com/linux-china/wukong"
repository = "https://github.com/linux-china/wukong"
license = "Apache-2.0"

[[bin]]
name = "jbang"
path = "src/jbang.rs"

[[bin]]
name = "sdk"
path = "src/sdkman.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "4.5"
oneio = { version = "0.17", default-features = false, features = ["remote", "gz"] }
flate2 = "1"
tar = "0.4"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6"
dirs = "5"
anyhow = "1"
java-properties = "2"
zip = "2.2.0"
colored = "2"
handlebars = "6.1.0"
itertools = "0.13"
symlink = "0.1.0"
tempfile = "3.12.0"
fs_extra = "1.3.0"
exitcode = "1.1.2"

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
