[package]
name = "wukong"
version = "0.3.0"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "Wukong is a command-line toolchain for Java with Rust"
keywords = ["java", "toolchain", "jbang", "sdkman"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/wukong"
readme = "README.md"
homepage = "https://github.com/linux-china/wukong"
repository = "https://github.com/linux-china/wukong"
license = "Apache-2.0"

[[bin]]
name = "jbang"
path = "src/jbang.rs"

[[bin]]
name = "sdk"
path = "src/sdkman.rs"

[[bin]]
name = "jenv"
path = "src/jenv.rs"

[[bin]]
name = "mcs"
path = "src/mcs.rs"

[[bin]]
name = "mt"
path = "src/mt.rs"

[[bin]]
name = "jarviz"
path = "src/jarviz.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "4.5"
url = "2.5"
flate2 = "1.1"
tar = "0.4.44"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
which = "8"
dirs = "6"
anyhow = "1"
java-properties = "2"
zip = "6.0"
colored = "3"
handlebars = "6.3.2"
itertools = "0.14"
symlink = "0.1.0"
fs_extra = "1.3.0"
shlex = "1.3"
lazy_static = "1.5.0"
chrono = "0.4.42"
pad = "0.1"
walkdir="2.5"
prettytable-rs = "0.10"
regex="1.11"

[dev-dependencies]
dotenvy = "0.15"
rstest = "0.26"
testresult = "0.4"

[profile.dev]
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Whether to install an updater program
install-updater = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
